[gd_scene load_steps=5 format=3 uid="uid://mmkn1odmfgem"]

[ext_resource type="Script" uid="uid://chd4bcrk4ns73" path="res://scenes/ui/pause_menu.gd" id="1_7ida2"]
[ext_resource type="FontFile" uid="uid://le2vdo2626vw" path="res://assets/fonts/Montserrat-Medium.ttf" id="1_vb6pq"]

[sub_resource type="LabelSettings" id="LabelSettings_7ida2"]
font = ExtResource("1_vb6pq")
font_size = 96
outline_size = 15
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_n5dsq"]
font = ExtResource("1_vb6pq")
font_size = 24

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_7ida2")

[node name="MainButtons" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0

[node name="ColorRect" type="ColorRect" parent="MainButtons"]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0, 0, 0, 0.172549)

[node name="Label" type="Label" parent="MainButtons"]
offset_right = 1280.0
offset_bottom = 360.0
text = "Pausa"
label_settings = SubResource("LabelSettings_7ida2")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ResumeButton" type="Button" parent="MainButtons"]
offset_left = 584.0
offset_top = 360.0
offset_right = 720.0
offset_bottom = 413.0
text = "Continuar"

[node name="QuitPauseButton" type="Button" parent="MainButtons"]
offset_left = 584.0
offset_top = 506.0
offset_right = 720.0
offset_bottom = 558.0
text = "Salir"

[node name="ConfirmQuitMenu" type="ColorRect" parent="."]
visible = false
offset_left = 351.0
offset_top = 364.0
offset_right = 956.0
offset_bottom = 634.0
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="ConfirmQuitMenu"]
layout_mode = 0
offset_left = 69.0
offset_right = 539.0
offset_bottom = 135.0
text = "¿De verdad deseas Salir? 
Se perderá todo el progreso del juego."
label_settings = SubResource("LabelSettings_n5dsq")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ConfirmQuit" type="Button" parent="ConfirmQuitMenu"]
layout_mode = 0
offset_left = 243.0
offset_top = 146.0
offset_right = 352.0
offset_bottom = 190.0
text = "Salir"

[node name="CancelQuit" type="Button" parent="ConfirmQuitMenu"]
layout_mode = 0
offset_left = 252.0
offset_top = 212.0
offset_right = 344.0
offset_bottom = 250.0
text = "Cancelar"

[connection signal="pressed" from="MainButtons/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="MainButtons/QuitPauseButton" to="." method="_on_quit_pause_button_pressed"]
[connection signal="pressed" from="ConfirmQuitMenu/ConfirmQuit" to="." method="_on_confirm_quit_pressed"]
[connection signal="pressed" from="ConfirmQuitMenu/CancelQuit" to="." method="_on_cancel_quit_pressed"]
